[gd_scene load_steps=4 format=3 uid="uid://brfrkkss3t44b"]

[ext_resource type="Script" path="res://Scenes/UI/Actions/shop_button.gd" id="1_8cxwa"]
[ext_resource type="Script" path="res://addons/gloot/core/inventory_item.gd" id="2_avlto"]
[ext_resource type="Resource" uid="uid://byhy2caoyo5q6" path="res://Constants/item_protoset.tres" id="3_1u74v"]

[node name="Shop" type="Node2D"]
texture_filter = 6
script = ExtResource("1_8cxwa")

[node name="Button" type="Button" parent="."]
offset_top = 84.0
offset_right = 38.0
offset_bottom = 115.0
text = "Buy"

[node name="InventoryItem" type="Node" parent="."]
script = ExtResource("2_avlto")
protoset = ExtResource("3_1u74v")
prototype_id = "bed"

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
